css part completed

--- a/index.html
+++ b/index.html
@@ -8,22 +8,51 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="title">Drink Water</h1>
-    <p class="goal">Goal: 2 Liters</p>
+    <div class="headerContainer">
+      <h1 class="title">Drink Water</h1>
+      <p class="goal">Goal: 2 Liters</p>
+    </div>
     <div class="twoLitreGlass">
-      <p class="litre">2L</p>
+      <h4 class="litre">2L</h4>
       <small class="ltrRemained">Remained</small>
     </div>
-    <p class="glassSelectionText">Select how many glasses of water that you have drank</p>
     <div class="glassContainer">
-      <div class="smallGlass">250 ml</div>
-      <div class="smallGlass">250 ml</div>
-      <div class="smallGlass">250 ml</div>
-      <div class="smallGlass">250 ml</div>
-      <div class="smallGlass">250 ml</div>
-      <div class="smallGlass">250 ml</div>
-      <div class="smallGlass">250 ml</div>
-      <div class="smallGlass">250 ml</div>
+      <p class="glassSelectionText">Select how many glasses of water that you have drank</p>
+      <div class="smallGlassContainer">
+        <div class="smallGlass">
+          <p class="quantity">250</p>
+          <p class="unit">ml</p>
+        </div>
+        <div class="smallGlass">
+          <p class="quantity">250</p>
+          <p class="unit">ml</p>
+        </div>
+        <div class="smallGlass">
+          <p class="quantity">250</p>
+          <p class="unit">ml</p>
+        </div>
+        <div class="smallGlass">
+          <p class="quantity">250</p>
+          <p class="unit">ml</p>
+        </div>
+        <div class="smallGlass">
+          <p class="quantity">250</p>
+          <p class="unit">ml</p>
+        </div>
+        <div class="smallGlass">
+          <p class="quantity">250</p>
+          <p class="unit">ml</p>
+        </div>
+        <div class="smallGlass">
+          <p class="quantity">250</p>
+          <p class="unit">ml</p>
+        </div>
+        <div class="smallGlass">
+          <p class="quantity">250</p>
+          <p class="unit">ml</p>
+        </div>
+        
+      </div>
     </div>
   </div>
   <script src="./script.js"></script>
