--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
       <p class="goal">Goal: 2 Liters</p>
     </div>
     <div class="twoLitreGlass">
-      <h4 class="litre">2L</h4>
-      <small class="ltrRemained">Remained</small>
+      <div class="remaining-water-ltr">
+        <h4 class="litre">2L</h4>
+        <small class="ltrRemained">Remained</small>
+      </div>
+      <div class="water-filling"></div>
     </div>
     <div class="glassContainer">
       <p class="glassSelectionText">Select how many glasses of water that you have drank</p>
